relação de produtos e marcas

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -23,7 +23,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <span class="navbar-text ml-auto pr-5">
+            <span class="navbar-text text-right ml-auto pr-1">
                 <span id="nomeMenu"></span>
                 <a href="" class="btn btn-sm btn-outline-my-red ml-3">Sair</a>
             </span>
@@ -106,13 +106,13 @@
                         <div class="col-3">
                             <h5 class="text-secondary">Marca</h5>
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 text-center">
                             <h5 class="text-secondary">Quantidade</h5>
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 text-center">
                             <h5 class="text-secondary">Valor</h5>
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 text-right">
                             <h5 class="text-secondary">Ações</h5s>
                         </div>
                     </div>
