Algumas alterações simples

--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
                             <form id="formLogin">
                                 <div class="form-group">
                                     <label for="inputNome">Antes de começar escreva seu nome</label>
-                                    <input type="text" class="form-control" id="inputNome" aria-describedby="ajudaNome" placeholder="Seu nome..." required>
+                                    <input type="text" class="form-control" id="inputNome" aria-describedby="ajudaNome" placeholder="Seu nome...">
                                     <small id="ajudaNome" class="form-text text-muted">Você não pode deixar este campo em branco</small>
                                 </div>
                                 <button type="submit" id="btnLogin" class="btn btn-my-green">Começar</button>
