Edição dos formulários

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -70,12 +70,10 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">Marca do produto</label>
-                            <select class="form-control" id="select-marcas">
-                                <option selected>Escoha 1 marca...</option>
-                            </select>
+                            <select class="form-control" id="select-marcas"></select>
                             <small id="nome-help" class="form-text text-muted">Selecione a marca do produto</small>
                         </div>
-                        <button type="submit" class="btn btn-my-teal">Adicionar produto</button>
+                        <button type="submit" id="btn-add-produto" class="btn btn-my-teal">Adicionar produto</button>
                     </form>
 
                 </div>
@@ -87,7 +85,7 @@
                             <input type="text" class="form-control" id="input-marca-nome" aria-describedby="marca-help" placeholder="Marca...">
                             <small id="marca-help" class="form-text text-muted">Digite o nome da marca, exemplo: Samsung</small>
                         </div>
-                        <button type="submit" class="btn btn-my-teal">Adicionar marca</button>
+                        <button type="submit" id="btn-add-marca" class="btn btn-my-teal">Adicionar marca</button>
                     </form> 
 
                 </div>
