Edição na lsita de produtos

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -95,29 +95,7 @@
 
         <div class="col-8 p-5">
 
-            <div class="card bg-my-dark-light border-0 mt-5">
-                <div class="card-body p-2">
-                    <div class="row no-gutters">
-                        <div class="col-3">
-                            <h5 class="text-secondary">Produto</h5>
-                        </div>
-                        <div class="col-3">
-                            <h5 class="text-secondary">Marca</h5>
-                        </div>
-                        <div class="col-2 text-center">
-                            <h5 class="text-secondary">Quantidade</h5>
-                        </div>
-                        <div class="col-2 text-center">
-                            <h5 class="text-secondary">Valor</h5>
-                        </div>
-                        <div class="col-2 text-right">
-                            <h5 class="text-secondary">Ações</h5s>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <ul id="lista-produtos" class="list-unstyled">
+            <ul id="lista-produtos" class="list-group mt-5">
             </ul>
 
         </div>
