Edição da lista de produtos

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -95,7 +95,29 @@
 
         <div class="col-8 p-5">
 
-            <ul id="lista-produtos" class="list-group mt-5">
+            <ul class="list-group mt-5">
+                <li class="list-group-item bg-my-dark-light border-0"> 
+                    <div class="row align-items-center">
+                        <div class="col-3">
+                            <span class="font-weight-bold">Produto</span>
+                        </div>
+                        <div class="col-2">
+                            Marca
+                        </div>
+                        <div class="col-2">
+                            Valor
+                        </div>
+                        <div class="col-2">
+                            Quantidade
+                        </div>
+                        <div class="col-3 text-right">
+                            Ações
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+            <ul id="lista-produtos" class="list-group list-group-flush">
             </ul>
 
         </div>
