--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,19 +11,25 @@
 
     <title>Controle de estoque</title>
 
-  </head>
-  <body class="bg-my-dark-light">
+</head>
+
+<body class="bg-my-dark-light">
+
+    <div aria-live="polite" aria-atomic="true" style="position: relative;">
+        <div style="top:85px; right:20px;" class="position-absolute myToast" id="toast-place"></div>
+    </div>
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-my-purple">
         <a class="navbar-brand" href="#">
             <img src="assets/lightning.svg" width="" height="28px" alt="Logotipo">
             Controle de estoque simples</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            
+
             <span class="navbar-text text-right ml-auto pr-1">
                 <span id="nomeMenu"></span>
                 <a href="" class="btn btn-sm btn-outline-my-red ml-3">Sair</a>
@@ -37,10 +44,12 @@
 
             <ul class="nav nav-tabs mt-5" id="myTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Adicionar produto</a>
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
+                        aria-controls="home" aria-selected="true">Adicionar produto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Adicionar marca</a>
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                        aria-controls="profile" aria-selected="false">Adicionar marca</a>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
@@ -49,21 +58,25 @@
                     <form id="form-add-produto">
                         <div class="form-group">
                             <label for="input-produto-nome">Nome do produto</label>
-                            <input type="text" class="form-control" id="input-produto-nome" aria-describedby="nome-help" placeholder="Produto...">
-                            <small id="nome-help" class="form-text text-muted">Digite o nome do produto, exemplo: S10 Plus</small>
+                            <input type="text" class="form-control" id="input-produto-nome" aria-describedby="nome-help"
+                                placeholder="Produto...">
+                            <small id="nome-help" class="form-text text-muted">Digite o nome do produto, exemplo: S10
+                                Plus</small>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
                                     <label for="input-produto-qtdade">Quantidade</label>
-                                    <input type="text" class="form-control" id="input-produto-qtdade" aria-describedby="qtdade-help" placeholder="1...">
+                                    <input type="text" class="form-control" id="input-produto-qtdade"
+                                        aria-describedby="qtdade-help" placeholder="1...">
                                     <small id="qtdade-help" class="form-text text-muted">Digite somente números</small>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="form-group">
                                     <label for="input-produto-valor">Valor</label>
-                                    <input type="text" class="form-control" id="input-produto-valor" aria-describedby="valor-help" placeholder="R$ 1...">
+                                    <input type="text" class="form-control" id="input-produto-valor"
+                                        aria-describedby="valor-help" placeholder="R$ 1...">
                                     <small id="valor-help" class="form-text text-muted">Digite somente números</small>
                                 </div>
                             </div>
@@ -78,15 +91,17 @@
 
                 </div>
                 <div class="tab-pane fade pt-3 px-3" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    
+
                     <form id="form-add-marca">
                         <div class="form-group">
                             <label for="input-marca-nome">Nome da marca</label>
-                            <input type="text" class="form-control" id="input-marca-nome" aria-describedby="marca-help" placeholder="Marca...">
-                            <small id="marca-help" class="form-text text-muted">Digite o nome da marca, exemplo: Samsung</small>
+                            <input type="text" class="form-control" id="input-marca-nome" aria-describedby="marca-help"
+                                placeholder="Marca...">
+                            <small id="marca-help" class="form-text text-muted">Digite o nome da marca, exemplo:
+                                Samsung</small>
                         </div>
                         <button type="submit" id="btn-add-marca" class="btn btn-my-teal">Adicionar marca</button>
-                    </form> 
+                    </form>
 
                 </div>
             </div>
@@ -96,22 +111,22 @@
         <div class="col-8 p-5">
 
             <ul class="list-group mt-5">
-                <li class="list-group-item bg-my-dark-light border-0"> 
+                <li class="list-group-item bg-my-dark-light border-0">
                     <div class="row align-items-center">
                         <div class="col-3">
-                            <span class="font-weight-bold">Produto</span>
+                            <span class="font-weight-bold text-secondary">Produto</span>
                         </div>
                         <div class="col-2">
-                            Marca
+                            <span class="text-secondary">Marca</span>
                         </div>
                         <div class="col-2">
-                            Valor
+                            <span class="text-secondary">Valor</span>
                         </div>
                         <div class="col-2">
-                            Quantidade
+                            <span class="text-secondary">Quantidade</span>
                         </div>
                         <div class="col-3 text-right">
-                            Ações
+                            <span class="text-secondary">Ações</span>
                         </div>
                     </div>
                 </li>
@@ -124,11 +139,64 @@
 
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog  modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Editar produto</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modalBody">
+
+                    <form id="form-edit-produto">
+                        <div class="form-group">
+                            <label for="input-produto-nome">Nome do produto</label>
+                            <input type="text" class="form-control" id="input-produto-nome" aria-describedby="nome-help"
+                                placeholder="Produto...">
+                            <small id="nome-help" class="form-text text-muted">Digite o nome do produto, exemplo: S10
+                                Plus</small>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="input-produto-qtdade">Quantidade</label>
+                                    <input type="text" class="form-control" id="input-produto-qtdade"
+                                        aria-describedby="qtdade-help" placeholder="1...">
+                                    <small id="qtdade-help" class="form-text text-muted">Digite somente números</small>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="input-produto-valor">Valor</label>
+                                    <input type="text" class="form-control" id="input-produto-valor"
+                                        aria-describedby="valor-help" placeholder="R$ 1...">
+                                    <small id="valor-help" class="form-text text-muted">Digite somente números</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Marca do produto</label>
+                            <select class="form-control" id="select-marcas"></select>
+                            <small id="nome-help" class="form-text text-muted">Selecione a marca do produto</small>
+                        </div>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                        <button type="submit" id="modalTitle" class="btn btn-my-teal">Salvar alterações</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.js"></script>
     <script type="module" src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
